adjust spacings preventing overlapping and layout explosion due to large objects

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,11 +54,28 @@ a:hover {
 
 body {
   font-family: var(--font-family);
+  line-height: var(--line-height);
 }
 
-section {
+.container {
   max-width: 1100px;
-  margin: auto;
+  margin-inline: auto;
+  padding-inline: var(--space-5);
+}
+
+.container.text {
+  /* text heavy content should be smaller than normal content since it's a
+   * better reading experience to reduce the travel time of your eyes,
+   * otherwise it can be tiresome to read it. */
+  max-width: 700px;
+}
+
+.section-wrapper {
+  padding-block: var(--space-4);
+}
+.section-wrapper:nth-child(2n+1) {
+  /* every other child */
+  background-color: var(--bg-color);
 }
 
 /* CSS Resets end */
@@ -69,12 +86,16 @@ nav {
   top: 0;
   left: 0;
   z-index: 1;
+  background-color: var(--bg-color);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  margin-bottom: var(--space-4);
+}
+
+.page-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--space-3) var(--space-4);
-  background-color: var(--bg-color);
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  padding: var(--space-3);
 }
 
 nav h1 {
@@ -105,28 +126,30 @@ nav ul li {
   border: 0;
   background-color: transparent;
   cursor: pointer;
-  display: none;
+  display: none; /* flex */
+  align-items: center;
 }
 /* Navbar ends */
 
 /* Hero section */
 .hero {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 3fr 3fr;
   gap: var(--space-4);
-  max-width: 68.75rem;
-  margin: auto;
+  align-items: center;
+  justify-items: center;
 }
 
 .hero img {
-  height: 37.5rem;
-  width: 37.5rem;
+  width: 100%;
+  max-width: 50vmin;
+  height: auto;
+  aspect-ratio: 1/1;
 }
 
 .bio {
-  width: 25rem;
-  padding: var(--space-2);
+  width: 100%;
+  padding: var(--space-3);
   border-radius: var(--space-1);
   box-shadow: 0px 2px 15px 2px var(--primary-shadow);
 }
@@ -144,7 +167,6 @@ nav ul li {
 /* More about */
 .more-about {
   background-color: var(--bg-color);
-  padding: var(--space-3) var(--space-6);
 }
 
 .more-about h2 {
@@ -152,8 +174,7 @@ nav ul li {
 }
 
 .more-about p {
-  line-height: var(--line-height);
-  padding: var(--space-2);
+  margin-block: var(--space-2);
 }
 /* More about ends */
 
@@ -343,9 +364,10 @@ footer {
 
 /* Media queries for responsiveness */
 @media screen and (max-width: 720px) {
-  nav {
-    padding: var(--space-4) var(--space-3);
+  .container {
+    padding-inline: var(--space-4);
   }
+
   nav ul {
     position: fixed;
     background-color: var(--bg-color);
@@ -367,23 +389,14 @@ footer {
   }
 
   .burger-menu {
-    display: block;
+    display: flex;
   }
 
   .hero {
-    margin-top: calc(-1 * var(--space-5));
-    flex-direction: column;
-    gap: 0;
-  }
-
-  .bio {
-    margin-top: calc(-1 * var(--space-6));
-    width: 20.5rem;
-  }
-
-  .hero img {
-    height: 37.5rem;
-    width: 30rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+    gap: var(--space-4);
   }
 
   .more-about {
@@ -418,13 +431,8 @@ footer {
 }
 
 @media screen and (max-width: 420px) {
-  .hero img {
-    height: 37.5rem;
-    width: 23rem;
-  }
-
-  .bio {
-    width: 18.3rem;
+  .container {
+    padding-inline: var(--space-3);
   }
 
   .project-container {
